# Slice-to-Volume-CPP

./: .gitignore  CMakeLists.txt  HelloInsight.cpp  ITKImgProcess.cpp  Optimization.cpp  test.cpp
include/itk_img/: ITKImgProcess.h
include/optimization/: Optimization.h
